@@ -1,3 +1,8 @@
+Sun Nov 08 11:09:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py: Update to pass the docids as well as
+	  the rank estimates to the cache.
+
 Sun Nov 08 11:07:14 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/cachemanager/generic.py: Pull out the preparations for
